--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: clojure
 lein: lein2
-script: lein2 test
+script:
+  - lein2 cljsbuild once
+  - lein2 test
 jdk:
   - openjdk6
   - openjdk7
