--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ lein: lein
 script:
   - lein cljsbuild once
   - lein test
+dist: trusty
 jdk:
-  - openjdk6
-  - openjdk7
-  - oraclejdk7
+  - openjdk8
+  - oraclejdk8
